--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,9 +9,10 @@ cloud = "2.0.0-SNAPSHOT"
 bstats = "3.0.2"
 sponge-api = "11.0.0-SNAPSHOT"
 sponge-common = "1.20.6-11.0.0-SNAPSHOT"
-minecraft = "1.20.6"
+paper-api = "1.20.6-R0.1-SNAPSHOT"
+minecraft = "1.21-rc1"
 fabric-loom = "1.6.12"
-fabric-api = "0.100.0+1.20.6"
+fabric-api = "0.100.1+1.21"
 fabric-loader = "0.15.11"
 shadow = "8.1.1"
 flyway = "10.14.0"
