--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,10 +7,10 @@ adventure-fabric = "5.13.0"
 configurate = "4.2.0-SNAPSHOT"
 cloud = "2.0.0-SNAPSHOT"
 bstats = "3.0.2"
-sponge-api = "11.0.0-SNAPSHOT"
-sponge-common = "1.20.6-11.0.0-SNAPSHOT"
+sponge-api = "12.0.0-SNAPSHOT"
+sponge-common = "1.21-12.0.0-SNAPSHOT"
 paper-api = "1.20.6-R0.1-SNAPSHOT"
-minecraft = "1.21-rc1"
+minecraft = "1.21"
 fabric-loom = "1.6.12"
 fabric-api = "0.100.1+1.21"
 fabric-loader = "0.15.11"
