--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ storage = "3.3.0"
 math = "3.0.0"
 tasker = "1.2.0"
 adventure = "4.17.0"
-adventure-fabric = "5.14.0-SNAPSHOT"
+adventure-fabric = "5.14.0"
 configurate = "4.2.0-SNAPSHOT"
 cloud = "2.0.0-SNAPSHOT"
 bstats = "3.0.2"
@@ -11,8 +11,8 @@ sponge-api = "12.0.0-SNAPSHOT"
 sponge-common = "1.21-12.0.0-SNAPSHOT"
 paper-api = "1.21-R0.1-SNAPSHOT"
 minecraft = "1.21"
-fabric-loom = "1.6.12"
-fabric-api = "0.100.1+1.21"
+fabric-loom = "1.7.1"
+fabric-api = "0.100.3+1.21"
 fabric-loader = "0.15.11"
 shadow = "8.1.1"
 flyway = "10.15.0"
