--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -77,7 +77,7 @@ sgui = { module = "eu.pb4:sgui", version = "1.6.0+1.21" }
 fabric-permissions = { module = "me.lucko:fabric-permissions-api", version = "0.3.1" }
 
 # Bukkit
-inventory-framework = { module = "com.github.stefvanschie.inventoryframework:IF", version = "0.10.16" }
+inventory-framework = { module = "com.github.stefvanschie.inventoryframework:IF", version = "0.10.16-dev-SNAPSHOT" }
 grief-prevention = { module = "com.github.TechFortress:GriefPrevention", version = "16.18.4" }
 towny = { module = "com.palmergames.bukkit.towny:towny", version = "0.100.3.0" }
 lwc = { module = "com.griefcraft:lwc", version = "2.4.0" }
