--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ adventure = "4.17.0"
 adventure-fabric = "5.14.1"
 configurate = "4.2.0-SNAPSHOT"
 cloud = "2.0.0"
+cloud-platform = "2.0.0-SNAPSHOT"
 bstats = "3.0.3"
 sponge-api = "12.0.0-SNAPSHOT"
 sponge-common = "1.21-12.0.0-SNAPSHOT"
@@ -14,7 +15,7 @@ minecraft = "1.21.1"
 fabric-loom = "1.7.4"
 fabric-api = "0.103.0+1.21.1"
 fabric-loader = "0.16.5"
-shadow = "8.1.1"
+shadow = "8.3.0"
 flyway = "10.17.3"
 junit = "5.11.0"
 
@@ -56,10 +57,10 @@ bstats-bukkit = { module = "org.bstats:bstats-bukkit", version.ref = "bstats" }
 bstats-sponge = { module = "org.bstats:bstats-sponge", version.ref = "bstats" }
 
 cloud-core = { module = "org.incendo:cloud-core", version.ref = "cloud" }
-cloud-minecraft = { module = "org.incendo:cloud-minecraft-extras", version.ref = "cloud" }
-cloud-paper = { module = "org.incendo:cloud-paper", version.ref = "cloud" }
-cloud-fabric = { module = "org.incendo:cloud-fabric", version.ref = "cloud" }
-cloud-sponge = { module = "org.incendo:cloud-sponge", version.ref = "cloud" }
+cloud-minecraft = { module = "org.incendo:cloud-minecraft-extras", version.ref = "cloud-platform" }
+cloud-paper = { module = "org.incendo:cloud-paper", version.ref = "cloud-platform" }
+cloud-fabric = { module = "org.incendo:cloud-fabric", version.ref = "cloud-platform" }
+cloud-sponge = { module = "org.incendo:cloud-sponge", version.ref = "cloud-platform" }
 
 # Databases
 mysql = { module = "com.mysql:mysql-connector-j", version = "9.0.0" }
@@ -77,7 +78,7 @@ sgui = { module = "eu.pb4:sgui", version = "1.6.0+1.21" }
 fabric-permissions = { module = "me.lucko:fabric-permissions-api", version = "0.3.1" }
 
 # Bukkit
-inventory-framework = { module = "com.github.stefvanschie.inventoryframework:IF", version = "0.10.17" }
+inventory-framework = { module = "com.github.stefvanschie.inventoryframework:IF", version = "0.10.16-dev-SNAPSHOT" }
 grief-prevention = { module = "com.github.TechFortress:GriefPrevention", version = "16.18.4" }
 towny = { module = "com.palmergames.bukkit.towny:towny", version = "0.100.3.0" }
 lwc = { module = "com.griefcraft:lwc", version = "2.4.0" }
@@ -90,7 +91,7 @@ sponge-common = { module = "org.spongepowered:sponge", version.ref = "sponge-com
 sponge-mixin = { module = "org.spongepowered:mixin", version = "0.8.7" }
 
 # Plugins for build-logic
-shadow = { module = "com.github.johnrengelman:shadow", version.ref = "shadow" }
+shadow = { module = "com.gradleup.shadow:shadow-gradle-plugin", version.ref = "shadow" }
 sponge-vanilla = { module = "org.spongepowered:vanillagradle", version = "0.2.1-20240507.024226-82" }
 minotaur = { module = "com.modrinth.minotaur:Minotaur", version = "2.8.7" }
 checker = { module = "org.checkerframework:checkerframework-gradle-plugin", version = "0.6.44" }
