--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,9 +29,10 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            .gradle/caches/VanillaGradle
+            ~/.gradle/caches/fabric-loom
+            ~/.gradle/caches/paperweight-userdev
+            ~/.gradle/caches/VanillaGradle
             .gradle/loom-cache
-            paper/.gradle/caches/paperweight
           key: ${{ runner.os }}-build-cache-${{ hashFiles('**/libs.versions.toml', '**/*.gradle.kts', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-build-cache-
