--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,6 +46,7 @@ junit-platform = { module = "org.junit.platform:junit-platform-launcher" }
 adventure-api = { module = "net.kyori:adventure-api", version.ref = "adventure" }
 adventure-minimessage = { module = "net.kyori:adventure-text-minimessage", version.ref = "adventure" }
 adventure-fabric = { module = "net.kyori:adventure-platform-fabric", version.ref = "adventure-fabric" }
+option = { module = "net.kyori:option", version = "1.1.0" }
 
 luckperms-api = { module = "net.luckperms:api", version = "5.4" }
 mini-placeholders = { module = "io.github.miniplaceholders:miniplaceholders-api", version = "2.3.0" }
@@ -100,6 +101,7 @@ checker = { module = "org.checkerframework:checkerframework-gradle-plugin", vers
 [bundles]
 cloud = ["cloud-core", "cloud-minecraft"]
 configurate = ["configurate-core", "configurate-hocon", "configurate-gson"]
+configurate-loaders = ["configurate-hocon", "configurate-gson"]
 drivers-local = ["h2", "hsql"]
 drivers-remote = ["mysql", "mariadb", "postgresql"]
 drivers-nonstandard = ["mariadb", "postgresql", "h2", "hsql"]
