--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,12 +8,12 @@ configurate = "4.2.0"
 cloud = "2.0.0"
 cloud-platform = "2.0.0-SNAPSHOT"
 bstats = "3.1.0"
-sponge-api = "13.0.0"
-sponge-common = "1.21.4-14.0.0-SNAPSHOT"
-paper-api = "1.21.4-R0.1-SNAPSHOT"
-minecraft = "1.21.4"
+sponge-api = "15.0.0"
+sponge-common = "1.21.5-15.0.0-SNAPSHOT"
+paper-api = "1.21.5-no-moonrise-SNAPSHOT"
+minecraft = "1.21.5"
 fabric-loom = "1.10.5"
-fabric-api = "0.119.2+1.21.4"
+fabric-api = "0.119.9+1.21.5"
 fabric-loader = "0.16.12"
 shadow = "8.3.6"
 flyway = "11.6.0"
@@ -75,8 +75,8 @@ hsql = { module = "org.hsqldb:hsqldb", version = "2.7.4" }
 fabric-minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabric-api" }
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabric-loader" }
-fabric-placeholder = { module = "eu.pb4:placeholder-api", version = "2.5.2+1.21.3" }
-sgui = { module = "eu.pb4:sgui", version = "1.8.2+1.21.4" }
+fabric-placeholder = { module = "eu.pb4:placeholder-api", version = "2.6.2+1.21.5" }
+sgui = { module = "eu.pb4:sgui", version = "1.9.0+1.21.5" }
 fabric-permissions = { module = "me.lucko:fabric-permissions-api", version = "0.3.3" }
 
 # Bukkit
