Update some mixins and sidebar team packet for 1.21.5

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ storage = "3.3.0"
 math = "3.0.0"
 tasker = "1.2.0"
 adventure = "4.20.0"
-adventure-fabric = "6.3.0"
+adventure-fabric = "6.3.1-SNAPSHOT"
 configurate = "4.2.0"
 cloud = "2.0.0"
 cloud-platform = "2.0.0-SNAPSHOT"
