--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,21 +2,21 @@
 storage = "3.3.0"
 math = "3.0.0"
 tasker = "1.2.0"
-adventure = "4.22.0"
-adventure-fabric = "6.4.2-SNAPSHOT"
+adventure = "4.23.0"
+adventure-fabric = "6.5.0-SNAPSHOT"
 configurate = "4.2.0"
 cloud = "2.0.0"
 cloud-platform = "2.0.0-SNAPSHOT"
 bstats = "3.1.0"
-sponge-api = "15.0.0"
+sponge-api = "16.0.0"
 sponge-common = "1.21.6-15.0.0-SNAPSHOT"
 paper-api = "1.21.6-R0.1-SNAPSHOT"
 minecraft = "1.21.6"
 fabric-loom = "1.10.5"
-fabric-api = "0.127.0+1.21.6"
+fabric-api = "0.127.1+1.21.6"
 fabric-loader = "0.16.14"
 shadow = "8.3.6"
-flyway = "11.9.1"
+flyway = "11.9.2"
 junit = "5.13.1"
 
 [libraries]
@@ -76,7 +76,7 @@ fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fab
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabric-loader" }
 fabric-placeholder = { module = "eu.pb4:placeholder-api", version = "2.7.0+1.21.6" }
 sgui = { module = "eu.pb4:sgui", version = "1.10.0+1.21.6" }
-fabric-permissions = { module = "me.lucko:fabric-permissions-api", version = "0.4.0-SNAPSHOT" }
+fabric-permissions = { module = "me.lucko:fabric-permissions-api", version = "0.4.0" }
 
 # Bukkit
 inventory-framework = { module = "com.github.stefvanschie.inventoryframework:IF", version = "0.10.19-dev" }
@@ -93,7 +93,7 @@ sponge-mixin = { module = "org.spongepowered:mixin", version = "0.8.7" }
 
 # Plugins for build-logic
 shadow = { module = "com.gradleup.shadow:shadow-gradle-plugin", version.ref = "shadow" }
-maven-publish = { module = "com.vanniktech.maven.publish:com.vanniktech.maven.publish.gradle.plugin", version = "0.32.0" }
+maven-publish = { module = "com.vanniktech.maven.publish:com.vanniktech.maven.publish.gradle.plugin", version = "0.33.0" }
 sponge-vanilla = { module = "org.spongepowered:vanillagradle", version = "0.2.1-20240507.024226-82" }
 minotaur = { module = "com.modrinth.minotaur:Minotaur", version = "2.8.7" }
 checker = { module = "org.checkerframework:checkerframework-gradle-plugin", version = "0.6.55" }
