--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,20 +6,21 @@ adventure = "4.25.0"
 adventure-fabric = "6.7.0"
 configurate = "4.2.0"
 cloud = "2.0.0"
-cloud-platform = "2.0.0-SNAPSHOT"
+cloud-minecraft = "2.0.0-beta.12"
+cloud-minecraft-modded = "2.0.0-beta.13"
 bstats = "3.1.0"
-sponge-api = "16.0.0"
-sponge-common = "1.21.8-17.0.0-SNAPSHOT"
+sponge-api = "17.0.0"
+sponge-common = "1.21.9-17.0.0-SNAPSHOT"
 paper-api = "1.21.9-R0.1-SNAPSHOT"
-minecraft = "1.21.9"
+minecraft = "1.21.10"
 fabric-loom = "1.11.8"
-fabric-api = "0.134.0+1.21.9"
+fabric-api = "0.134.1+1.21.10"
 fabric-loader = "0.17.2"
 shadow = "9.2.2"
 flyway = "11.13.3"
 junit = "6.0.0"
-moddevgradle = "2.0.112"
-neoform = "1.21.9-20250930.151910"
+moddevgradle = "2.0.113"
+neoform = "1.21.10-20251007.142004"
 
 [libraries]
 storage = { module = "me.moros:storage", version.ref = "storage" }
@@ -60,10 +61,10 @@ bstats-bukkit = { module = "org.bstats:bstats-bukkit", version.ref = "bstats" }
 bstats-sponge = { module = "org.bstats:bstats-sponge", version.ref = "bstats" }
 
 cloud-core = { module = "org.incendo:cloud-core", version.ref = "cloud" }
-cloud-minecraft = { module = "org.incendo:cloud-minecraft-extras", version.ref = "cloud-platform" }
-cloud-paper = { module = "org.incendo:cloud-paper", version.ref = "cloud-platform" }
-cloud-fabric = { module = "org.incendo:cloud-fabric", version.ref = "cloud-platform" }
-cloud-sponge = { module = "org.incendo:cloud-sponge", version.ref = "cloud-platform" }
+cloud-minecraft = { module = "org.incendo:cloud-minecraft-extras", version.ref = "cloud-minecraft" }
+cloud-paper = { module = "org.incendo:cloud-paper", version.ref = "cloud-minecraft" }
+cloud-fabric = { module = "org.incendo:cloud-fabric", version.ref = "cloud-minecraft-modded" }
+cloud-sponge = { module = "org.incendo:cloud-sponge", version.ref = "cloud-minecraft" }
 
 # Databases
 mysql = { module = "com.mysql:mysql-connector-j", version = "9.4.0" }
