--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,8 +11,8 @@ cloud-minecraft-modded = "2.0.0-SNAPSHOT"
 bstats = "3.1.0"
 sponge-api = "17.0.0"
 sponge-common = "1.21.10-17.0.0-SNAPSHOT"
-paper-api = "1.21.11-pre3-R0.1-SNAPSHOT"
-minecraft = "1.21.11-pre3"
+paper-api = "1.21.11-R0.1-SNAPSHOT"
+minecraft = "1.21.11"
 fabric-loom = "1.14.5"
 fabric-api = "0.139.4+1.21.11"
 fabric-loader = "0.18.2"
@@ -21,7 +21,7 @@ flyway = "11.19.0"
 junit = "6.0.1"
 jspecify = "1.0.0"
 moddevgradle = "2.0.123"
-neoform = "1.21.11-pre3-20251125.161933"
+neoform = "1.21.11-20251209.172050"
 
 [libraries]
 storage = { module = "me.moros:storage", version.ref = "storage" }
